--- a/features/fixtures/cucumber_tags/granules_search_by_dataset_id_atom.yml
+++ b/features/fixtures/cucumber_tags/granules_search_by_dataset_id_atom.yml
@@ -116,7 +116,7 @@ http_interactions:
             <id>G1000000016-OS_PROV_1</id>
             <title type="text">CoolGranule1</title>
             <updated>1999-12-31T19:00:00-05:00</updated>
-            <echo:datasetId>Cool Dataset</echo:datasetId>
+            <echo:datasetId>cool_dataset_id</echo:datasetId>
             <echo:producerGranuleId>CoolGranule1</echo:producerGranuleId>
             <echo:granuleSizeMB>14.0262</echo:granuleSizeMB>
             <echo:originalFormat>ECHO10</echo:originalFormat>
