--- a/spec/fixtures/models/facet/water_facets.yml
+++ b/spec/fixtures/models/facet/water_facets.yml
@@ -62,7 +62,7 @@ http_interactions:
   recorded_at: Sun, 01 Mar 2015 14:55:39 GMT
 - request:
     method: get
-    uri: https://cmr.earthdata.nasa.gov/search/collections.atom?include_facets=true&include_has_granules=true&include_tags=org.ceos.wgiss.cwic.*,opensearch.granule.osdd,org.geoss.geoss_data-core,gov.nasa.eosdis%20&keyword=water&page_num=1&page_size=10
+    uri: https://cmr.earthdata.nasa.gov/search/collections.atom?include_facets=true&include_has_granules=true&include_tags=org.ceos.wgiss.cwic.*,opensearch.granule.osdd,org.geoss.geoss_data-core,gov.nasa.eosdis,int.esa.fedeo&keyword=water&page_num=1&page_size=10
     body:
       encoding: US-ASCII
       string: ''
